# weread2notion-AI

./: .env.example  .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: weread.yml
docs/: COMMUNITY_POST.md  GITHUB_PUBLISHING.md  RELEASE_NOTES_v1.0.0.md  TECHNICAL.md
src/weread2notion/: __init__.py  blocks.py  cli.py  config.py  normalize.py  notion.py  sync.py  weread.py
tests/: test_cli.py  test_config.py  test_normalize.py  test_notion.py  test_sync.py  test_weread.py
